--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,6 @@ dist.jar=${dist.dir}/ToPS_Visualization.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference._rea_de_Trabalho-prefuse-beta=/home/fabinhosano/\u00c1rea de Trabalho/prefuse-beta
 file.reference._rea_de_Trabalho-prefuse.flare-alpha-20090124=../../../\u00c1rea de Trabalho/prefuse.flare-alpha-20090124
 file.reference.antlr-runtime-3.5.jar=/home/fabinhosano/NetBeansProjects/Bibliotecas/antlr-runtime-3.5.jar
 file.reference.hamcrest-core-1.3.jar=lib/hamcrest-core-1.3.jar
@@ -40,6 +39,7 @@ file.reference.junit-4.11.jar=lib/junit-4.11.jar
 file.reference.junit.jar=/home/fabinhosano/NetBeansProjects/Bibliotecas/junit.jar
 file.reference.lucene-1.4.3.jar=/home/fabinhosano/\u00c1rea de Trabalho/prefuse-beta/lib/lucene-1.4.3.jar
 file.reference.orsonpdf-1.2-eval.jar=lib/orsonpdf-1.2-eval.jar
+file.reference.prefuse.jar=/home/fabinhosano/NetBeansProjects/Bibliotecas/prefuse.jar
 file.reference.servlet.jar=lib/servlet.jar
 file.reference.swtgraphics2d.jar=lib/swtgraphics2d.jar
 file.reference.ToPS_Parser.jar=/home/fabinhosano/NetBeansProjects/Bibliotecas/ToPS_Parser.jar
@@ -60,8 +60,8 @@ javac.classpath=\
     ${file.reference.orsonpdf-1.2-eval.jar}:\
     ${file.reference.servlet.jar}:\
     ${file.reference.swtgraphics2d.jar}:\
-    ${file.reference._rea_de_Trabalho-prefuse-beta}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.prefuse.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
